# football

./: .env  .env.template  .gitignore  AGENTS.md  README.md  config.ini  package-lock.json  package.json  pyproject.toml  setup.sh  setup_env.sh  tailwind.config.js
app/: __init__.py  config.py  csrf.py  jinja2_env.py  logger.py  main.py
app/auth/: __init__.py  cognito.py  cookies.py  dependencies.py  middleware.py  routes.py  schemas.py
app/core/: config.py
app/routes/: matches.py  settings.py
app/services/: __init__.py  matches.py  user_settings.py
app/static/: tailwind.config.js
app/static/css/: tailwind.css
app/static/js/: alpine.js
app/templates/: base.html  home.html  matches.html  settings.html
app/templates/auth/: login.html
infra/: dynamodb-matches-table.yaml
tests/: test_auth.py  test_matches.py  test_settings.py
